--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ bin-release/
 *.air
 *.ipa
 *.apk
-
+main
 main.exe
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
