--- a/pkg/kubectl/main/replica.yaml
+++ b/pkg/kubectl/main/replica.yaml
@@ -9,6 +9,7 @@ spec:
       app: example-app  # 匹配要管理的Pod的标签
   template:
     metadata:
+      name : pod-replica
       labels:
         app: example-app  # Pod的标签
     spec:
