--- a/pkg/kubectl/main/pod1.yaml
+++ b/pkg/kubectl/main/pod1.yaml
@@ -1,14 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-example
-  labels:
-
+  name: http-server
 spec:
   containers:
-  - name: nginx
-    image: nginx:stable-alpine
-    ports:
-    - containerPort: 80
-  - name: redis
-    image: redis:alpine
+    - name: http-server
+      image: python:3.9-alpine
+      command: ["python", "-m", "http.server", "4335"]
+      ports:
+        - containerPort: 4335
