--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ bin-release/
 *.ipa
 *.apk
 build
-
+main
 main.exe
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
