--- a/pkg/kubectl/main/pod2.yaml
+++ b/pkg/kubectl/main/pod2.yaml
@@ -1,29 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: multi-container-example
+  name: pod-example
+  labels:
+    app: example-app
 spec:
   containers:
   - name: nginx
     image: nginx:stable-alpine
     ports:
     - containerPort: 80
-    volumeMounts:
-    - name: html
-      mountPath: /usr/share/nginx/html
-  - name: content
-    image: alpine:latest
-    command: ["/bin/sh", "-c"]
-    args:
-      - while true; do
-          date >> /html/index.html;
-          sleep 5;
-        done
-    volumeMounts:
-    - name: html
-      mountPath: /html
-  volumes:
-  - name: html
-    hostPath:
-      path: /home/share
 
+status:
+  cpuUsage: 0.1
+  memUsage: 0.1
