--- a/pkg/kubectl/main/hpa.yaml
+++ b/pkg/kubectl/main/hpa.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: example-app
+      app: hpa-example
   scaleTargetRef:
     apiVersion: v1
     kind: Deployment
