--- a/pkg/kubectl/main/pod2.yaml
+++ b/pkg/kubectl/main/pod2.yaml
@@ -3,14 +3,13 @@ kind: Pod
 metadata:
   name: pod-example
   labels:
-    app: example-app
+    app: hpa-example
 spec:
   containers:
   - name: nginx
     image: nginx:stable-alpine
     ports:
     - containerPort: 80
-
-status:
-  cpuUsage: 0.1
-  memUsage: 0.1
+    resources:
+      cpu: 0.1
+      memory: 0.1
