--- a/pkg/kubectl/main/dns.yaml
+++ b/pkg/kubectl/main/dns.yaml
@@ -4,4 +4,9 @@ metadata:
   name: example-dns
   namespace: default
 spec:
-  host: example.com
+  host: example-service
+  paths:
+    - subPath: /path
+      serviceIp: 192.168.1.158  # 这里需要填入实际的Service ClusterIP
+      serviceName: example-service
+      servicePort: 4335
