--- a/pkg/kubectl/main/pod2.yaml
+++ b/pkg/kubectl/main/pod2.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-example
+  name: http-server-2
   labels:
-    app: hpa-example
+    app: myapp-2
 spec:
   containers:
-  - name: nginx
-    image: nginx:stable-alpine
-    ports:
-    - containerPort: 80
-    resources:
-      cpu: 0.1
-      memory: 0.1
+    - name: http-server-2
+      image: python:3.9-alpine
+      command: []
+      ports:
+        - containerPort: 4335
