--- a/pkg/kubectl/main/dns.yaml
+++ b/pkg/kubectl/main/dns.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   host: example-service
   paths:
-    - subPath: /path
-      serviceIp: 3.3.3.244  # 这里需要填入实际的Service ClusterIP
+    - subPath: /python
+      serviceIp: 3.3.3.232  # 这里需要填入实际的Service ClusterIP
       serviceName: example-service
       servicePort: 4335
