--- a/pkg/kubectl/main/workflow1.yaml
+++ b/pkg/kubectl/main/workflow1.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: default
 spec:
   entryName: node1
-  entryParam: {A: 1, B: 2}
-  WorkflowNodes:
+  entryParam: {a: 1, b: 2}
+  workflowNodes:
     - name: node1
       type: Function
-      FuncNode:
+      funcNode:
         funcNameSpace: default
         funcName: example-func
         nextNodeName: node2
@@ -22,7 +22,7 @@ spec:
         falseNodeName: node1
     - name: node3
       type: Function
-      FuncNode:
+      funcNode:
         funcNameSpace: default
         funcName: example-func
         nextNodeName: end
