--- a/pkg/kubectl/main/pod1.yaml
+++ b/pkg/kubectl/main/pod1.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: http-server
   labels:
-    app: myapp
+    app: example-service
 spec:
   containers:
     - name: http-server
