--- a/pkg/kubectl/main/s1.yaml
+++ b/pkg/kubectl/main/s1.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   selector:
-    app: myapp
+    svc: example-service
   ports:
     - name: http
       protocol: TCP
