--- a/pkg/kubectl/main/pod3.yaml
+++ b/pkg/kubectl/main/pod3.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-example
+  name: pod-hpa-example
   labels:
     app: hpa-example
 spec:
@@ -10,8 +10,3 @@ spec:
     image: nginx:stable-alpine
     ports:
     - containerPort: 80
-  - name: http-server
-    image: python:3.9-alpine
-    command: ["python", "-m", "http.server", "4335"]
-    ports:
-    - containerPort: 4335
