--- a/pkg/kubectl/main/dns.yaml
+++ b/pkg/kubectl/main/dns.yaml
@@ -7,6 +7,8 @@ spec:
   host: example-service
   paths:
     - subPath: /python
-      serviceIp: 3.3.3.232  # 这里需要填入实际的Service ClusterIP
       serviceName: example-service
       servicePort: 4335
+    - subPath: /asdf
+      serviceName: example-service-2
+      servicePort: 80
