--- a/pkg/kubectl/main/s2.yaml
+++ b/pkg/kubectl/main/s2.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: default
 spec:
   selector:
-    svc: example-service-2
+    svc: hpa-example
   ports:
     - name: http
       protocol: TCP
-      port: 4335
-      targetPort: 4335
+      port: 80
+      targetPort: 80
       nodePort: 30080
   type: ClusterIP
