--- a/pkg/kubectl/main/workflow1.yaml
+++ b/pkg/kubectl/main/workflow1.yaml
@@ -11,21 +11,14 @@ spec:
       type: Function
       funcNode:
         funcNameSpace: default
-        funcName: example-function
+        funcName: funcadd
         nextNodeName: node2
         funcParam: ["a", "b"]
     - name: node2
       type: Choice
       choiceNode:
         expression: "$result > 10"
-        trueNodeName: node3
+        trueNodeName: end
         trueEntryParam: {a: $result, b: 1}
         falseNodeName: node1
         falseEntryParam: {a: $result, b: 2}
-    - name: node3
-      type: Function
-      funcNode:
-        funcNameSpace: default
-        funcName: example-function
-        nextNodeName: end
-        funcParam: ["a", "b"]
