--- a/pkg/kubectl/main/monitor1.yaml
+++ b/pkg/kubectl/main/monitor1.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: http-server
-  labels:
-    app: myapp
+  name: mypod
 spec:
   containers:
-    - name: http-server
-      image: python:3.9-alpine
-      command: ["python", "-m", "http.server", "4335"]
-      ports:
-        - containerPort: 4335
+  - name: mycontainer
+    image: myprogram:latest
+    ports:
+    - containerPort: 12345
 monitor:
-  metricsPorts: ["8990"]
+  metricsPorts: ["12345"]
