--- a/pkg/kubectl/main/job2.yaml
+++ b/pkg/kubectl/main/job2.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Job
 metadata:
-  name: job1
+  name: job2
   namespace: default
 spec:
   partition: dgx2
@@ -10,7 +10,7 @@ spec:
   cpusPerTask: 1
   gres: gpu:1
 file:
-  /root/minik8s/pkg/jobserver/cuda_code/matrix_add.cu
+  /root/minik8s/pkg/jobserver/cuda_code/matrix_mul.cu
 script: |
-  nvcc -o matrix_add matrix_add.cu
-  ./matrix_add
+  nvcc -o matrix_mul matrix_mul.cu
+  ./matrix_mul
